--- a/api/package.json
+++ b/api/package.json
@@ -5,12 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "cd src && nodemon server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm install && tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.11.18",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
@@ -19,14 +24,10 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
-    "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.15",
-    "@types/jsonwebtoken": "^9.0.1",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   }
 }
